--- a/my-project/src/components/animation/style.css
+++ b/my-project/src/components/animation/style.css
@@ -1,84 +1,82 @@
-span{
-    stroke: black;
+span {
+  stroke: black;
 }
-
 
 span:nth-child(0) {
-  animation-delay: 0.0s
+  animation-delay: 0s;
 }
 span:nth-child(1) {
-  animation-delay: 0.1s
+  animation-delay: 0.1s;
 }
 span:nth-child(2) {
-  animation-delay: 0.2s
+  animation-delay: 0.2s;
 }
 span:nth-child(3) {
-  animation-delay: 0.3s
+  animation-delay: 0.3s;
 }
 span:nth-child(4) {
-  animation-delay: 0.4s
+  animation-delay: 0.4s;
 }
 span:nth-child(5) {
-  animation-delay: 0.5s
+  animation-delay: 0.5s;
 }
 span:nth-child(6) {
-  animation-delay: 0.6s
+  animation-delay: 0.6s;
 }
 span:nth-child(7) {
-  animation-delay: 0.7s
+  animation-delay: 0.7s;
 }
 span:nth-child(8) {
-  animation-delay: 0.8s
+  animation-delay: 0.8s;
 }
 span:nth-child(9) {
-  animation-delay: 0.9s
+  animation-delay: 0.9s;
 }
 span:nth-child(10) {
   animation-delay: 1s;
-  
 }
 span:nth-child(11) {
-  animation-delay: 1.1s
+  animation-delay: 1.1s;
 }
 span:nth-child(12) {
-  animation-delay: 1.2s
+  animation-delay: 1.2s;
 }
 span:nth-child(13) {
-  animation-delay: 1.3s
+  animation-delay: 1.3s;
 }
 span:nth-child(14) {
-  animation-delay: 1.4s
+  animation-delay: 1.4s;
 }
 span:nth-child(15) {
-  animation-delay: 1.5s
+  animation-delay: 1.5s;
 }
 span:nth-child(16) {
-  animation-delay: 1.6s
+  animation-delay: 1.6s;
 }
 span:nth-child(17) {
-  animation-delay: 1.7s
+  animation-delay: 1.7s;
 }
 span:nth-child(18) {
-  animation-delay: 1.8s
+  animation-delay: 1.8s;
 }
 span:nth-child(19) {
-  animation-delay: 1.9s
+  animation-delay: 1.9s;
 }
 span:nth-child(20) {
-  animation-delay: 2.0s
+  animation-delay: 2s;
 }
 span:nth-child(21) {
-  animation-delay: 2.1s
+  animation-delay: 2.1s;
 }
 span:nth-child(22) {
-  animation-delay: 2.2s
+  animation-delay: 2.2s;
 }
 span:nth-child(23) {
-  animation-delay: 2.3s
+  animation-delay: 2.3s;
 }
 span:nth-child(24) {
-  animation-delay: 2.4s
+  animation-delay: 2.4s;
 }
 span:nth-child(25) {
-  animation-delay: 2.5s
+  animation-delay: 2.5s;
 }
